# Final_Assigment_NLP

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  metrics_service.py  requirements.txt  test_streaming.py
backend/routers/: agent.py  audio.py  calendar.py  metrics.py
backend/services/: date_resolver.py  metrics_service.py
configs/: metrics_thresholds.json  nlp_rules.json  system_rules.json
data/: README.md  prepare_librispeech.py  prepare_voxconverse.py  requirements.txt
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/agents/: calendarSyncAgent.js
frontend/src/components/: ActionItemTable.jsx  AgentChat.jsx  AudioPlayer.jsx  AudioWorkspace.jsx  CalendarSyncDialog.jsx  CalendarSyncResult.jsx  Dashboard.jsx  ErrorMessage.jsx  Loader.jsx  Login.jsx  Navbar.jsx  ResultView.jsx  Sidebar.jsx  SpeakerTimeline.jsx  SummaryPanel.jsx  UploadForm.jsx  index.js
frontend/src/context/: AuthContext.jsx
frontend/src/services/: api.js
frontend/src/utils/: mergeTranscript.js
models/: README.md
models/notebooks/: Evaluate_ASR.ipynb  Evaluate_Diarizaion.ipynb  Train_ASR.ipynb  Train_Diarizaion.ipynb
src/app/: docker-compose.yml
src/app/backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  requirements.txt
src/app/docs/: agentic_sync_plan.md  continual.md  (+1 more)
test/: smoke-test.py  test2.py  test_date_resolver.py  test_e2e_pipeline.py  test_llm.py  test_metrics.py
(+55 files in other folders)
